--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,8 @@
         <log4j.version>1.2.17</log4j.version>
         <logback.version>1.2.3</logback.version>
         <!--Jackson-->
-        <jackson.version>2.9.9.1</jackson.version>
+        <jackson.core.version>2.9.9</jackson.core.version>
+        <jackson.databind.version>2.9.9.1</jackson.databind.version>
         <!--freemarker-->
         <freemarker.version>2.3.28</freemarker.version>
         <!--cglib-->
@@ -260,12 +261,12 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson.core.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson.databind.version}</version>
             </dependency>
 
             <!-- Spring -->
